<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest02MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/serverport"
            android:hint="@string/port"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serverbtn"
            android:text="@string/serverbtn"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/clientip"
            android:hint="@string/ip"
            />

        <EditText
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:id="@+id/clientport"
            android:hint="@string/port"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clientbtn"
            android:text="@string/clientbtn"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:id="@+id/clientinput1"
            android:hint="@string/currency"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response"
        android:textSize="24sp"
        android:id="@+id/response"
        />

</LinearLayout>